# libflame

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  Makefile  NOTICES  README-AMD.md  aocl-lapack.pc.in  configure  fla_format_code.py  flame.pc.in  so_version
.github/.ai_pr_platform/: ai-pr-platform-app.yml  ai_coverity.json
.github/PULL_REQUEST_TEMPLATE/: common-mistakes.md  pr.md
.github/workflows/: branch-name-check.yml  codeql_cpp_placeholder.yml
cmake/: find_aocl-blas.cmake  find_dep_libs.cmake
cmake/presets/: base.json  linux-make-aocc.json  linux-make-gcc.json  win-msvc.json  win-ninja.json
docs/libflame/: CMakeLists.txt  Doxyfile
docs/libflame/rst/: API_Guide.rst  AuxiliaryRoutines.rst  Auxiliary_routines_LinearSolve.rst  Auxiliary_routines_least_square.rst  Auxiliary_routines_least_square_apis.rst  AuxilliaryRoutines.rst  Auxilliary_routines_LinearSolve.rst  Auxilliary_routines_apis.rst  BLASLike.rst  Constrained_least_squares.rst  Constrained_least_squares_apis.rst  CosineSineDecomposition.rst  CosineSineDecomposition_apis.rst  EigenvalueRoutines.rst  GivensJacobiPlaneRotations.rst  GivensJacobiPlaneRotations_apis.rst  HouseholdReflector.rst  HouseholdReflector_apis.rst  InitializeCopyConvert.rst  InitializeCopyConvert_apis.rst  LDL.rst  LDL_apis.rst  LDL_computation.rst  LDL_computation_apis.rst  LQ.rst  LQ_apis.rst  LU_Computational.rst  LU_Computational_apis.rst  LU_General_matrix_driver.rst  LU_General_matrix_driver_apis.rst  LeastSquare.rst  Level1BLASLike.rst  Level1BLASLike_apis.rst  Level2BLASLike.rst  Level2BLASLike_apis.rst  Level3BLASLike.rst  Level3BLASLike_apis.rst  LinearSolve.rst  MatrixNorm.rst  MatrixNorm_apis.rst  (+25 more)
docs/libflame/rst/_template/flavors/local/: footer.jinja  header.jinja  left-side-menu.jinja
netlib-test/: README.txt  netlib_ctest.cmake  run-netlib-test-aocc.sh  run-netlib-test.sh
netlib-test/lapack-3.12/: CMakeLists.txt
netlib-test/lapack-3.12/TESTING/: CMakeLists.txt
old/lapack-test/play/: normalize.c
scripts/: fla_format_code.py  script_aoclutil.sh
src/aocl_dtl/: aocldtl.c  aocldtl.h  aocldtlcf.h  aoclfal.c  aoclfal.h  aoclflist.c  aoclflist.h  aoclos.c  aoclos.h  aocltpdef.h
src/flablas/f2c/: caxpy.c  ccopy.c  cdotc.c  cdotu.c  cgbmv.c  cgemm.c  cgemv.c  cgerc.c  cgeru.c  chbmv.c  chemm.c  chemv.c  cher.c  cher2.c  cher2k.c  cherk.c  chpmv.c  chpr.c  chpr2.c  crotg.c  cscal.c  csrot.c  csscal.c  cswap.c  csymm.c  csyr2k.c  csyrk.c  ctbmv.c  ctbsv.c  ctpmv.c  ctpsv.c  ctrmm.c  ctrmv.c  ctrsm.c  ctrsv.c  dcabs1.c  dgbmv.c  dgemm.c  dgemv.c  dsbmv.c  (+79 more)
src/lapack/: CMakeLists.txt
src/lapack/x86/: CMakeLists.txt
src/lapack/x86/avx2/: CMakeLists.txt  fla_dgeqrf_small_avx2.c  fla_dgeqrf_small_avx2.h  fla_dgesvd_nn_small10_avx2.c  fla_dgesvd_nn_small1T_avx2.c  fla_dgesvd_small6T_avx2.c  fla_dgesvd_small6_avx2.c  fla_dgesvd_small_avx2.h  fla_dgesvd_xs_small10T_avx2.c  fla_dgetrf_small_avx2.c  fla_dgetrs_small_trsm_ll_avx2.c  fla_dhrot3_avx2.c  fla_dlange_kernels_avx2.c  fla_dlarf_kernels_avx2.c  fla_dnrm2_blas_avx2.c  fla_dpotrf_small_avx2.c  fla_dpotri_small_avx2.c  fla_drot_avx2.c  fla_dscal_ix1_avx2.c  fla_lange_kernels_avx2.c  fla_lapack_avx2_kernels.h  fla_lu_piv_small_d_update_tr_matrix_avx2.c  fla_lu_piv_small_s_update_tr_matrix_avx2.c  fla_sger_avx2.c  fla_sgetrf_small_avx2.c  fla_sscal_ix1_avx2.c  fla_zgetrf_avx2.c  fla_zlarf_kernels_avx2.c  fla_zrot_avx2.c  fla_zscal_ix1_avx2.c
src/lapack/x86/avx512/: CMakeLists.txt  fla_dgetrf_small_avx512.c  fla_dhrot3_avx512.c  fla_dlange_kernels_avx512.c  fla_dlarf_kernels_avx512.c  fla_dnrm2_blas_avx512.c  fla_dpotrf_small_avx512.c  fla_drot_avx512.c  fla_dscal_ix1_avx512.c  fla_lange_kernels_avx512.c  fla_lapack_avx512_kernels.h  fla_sgetrf_small_avx512.c  fla_sscal_ix1_avx512.c  fla_zgetrf_small_avx512.c  fla_zlarf_kernels_avx512.c  fla_zrot_avx512.c  fla_zscal_ix1_avx512.c
src/lapacke/LAPACKE/: CMakeLists.txt
src/lapacke/LAPACKE/include/: CMakeLists.txt  lapack.h  lapacke_config.h
src/lapacke/LAPACKE/mangling/: CMakeLists.txt
src/lapacke/LAPACKE/src/: lapacke_cgejsv.c  lapacke_cgels.c  lapacke_cgelsd.c  lapacke_cgelss.c  lapacke_cgesvdq.c  lapacke_cgesvdx.c  lapacke_chbevx_2stage_work.c  lapacke_clacrm_work.c  lapacke_clarcm_work.c  lapacke_cunmlq.c  lapacke_dgels.c  lapacke_dgelsd.c  lapacke_dgelss.c  lapacke_dgesvdq.c  lapacke_dsbevx_2stage_work.c  lapacke_dtrsen.c  lapacke_sgels.c  lapacke_sgelsd.c  lapacke_sgelss.c  lapacke_sgesvdq.c  lapacke_ssbevx_2stage_work.c  lapacke_strsen.c  lapacke_zgejsv.c  lapacke_zgels.c  lapacke_zgelsd.c  lapacke_zgelss.c  lapacke_zgesvdq.c  lapacke_zhbevx_2stage_work.c  lapacke_zlacrm_work.c  lapacke_zlarcm_work.c  lapacke_zunmlq.c  lapacke_zunmlq_work.c
src/lapacke/LAPACKE/utils/: lapacke_lsame.c  lapacke_make_complex_double.c  lapacke_make_complex_float.c
src/map/archive/: lsame.c  xerbla.c
src/map/lapack2flamec/: CMakeLists.txt  FLA_bdsqr.c  FLA_gebrd.c  FLA_gehrd.c  FLA_gelqf.c  FLA_gelsd.c  FLA_geqpf.c  FLA_geqrf.c  FLA_gesdd.c  FLA_gesvd.c  FLA_getrf.c  FLA_getrfnp.c  FLA_getrfnpi.c  FLA_hegst.c  FLA_hetrd.c  FLA_lapack2flame_prototypes.h  FLA_lapack2flame_return_defs.h  FLA_lapack2flame_util.c  FLA_lapack2flame_util_defs.h  FLA_larfg.c  FLA_lauum.c  FLA_orgbr.c  FLA_orglq.c  FLA_orgqr.c  FLA_orgtr.c  FLA_ormbr.c  FLA_ormlq.c  FLA_ormqr.c  FLA_ormtr.c  FLA_potrf.c  FLA_potri.c  FLA_spffrt2.c  FLA_spffrtx.c  FLA_trsyl.c  (+3 more)
src/src_cpp/: libflame.hh  libflame_interface.hh  libflame_interface_aux.hh  libflame_interface_blas.hh  libflame_interface_eig.hh  libflame_interface_lin.hh  libflame_interface_lsq.hh  libflame_interface_orth.hh  libflame_interface_svd.hh
test/aoclflaprogress/: CMakeLists.txt
test/example/: CMakeLists.txt  sample_dgetrf.c
test/lapacke/: lapacke_gtest_helper.c  lapacke_gtest_helper.h
test/legacyflame/: CMakeLists.txt
test/main/: CMakeLists.txt  Makefile  ReadMe.txt  bitrepro_test.cmake  conformance_test.cmake  input.global.operations  input.global.operations.lapacke  main_ctest.cmake  overflow_underflow_test.cmake  repeatability_test.cmake
(+4386 files in other folders)
